--- a/index.html
+++ b/index.html
@@ -675,7 +675,59 @@ Fun Fact: My name means “date”(like the fruit) in hebrew!
 </div>
 <div id="partners" class="subcontent">
   <h1>Partners</h1>
-  <div class="innercontent">
+  <div class="section group">
+    <div class="col span_1_of_2">
+      <a target="_blank" href="#"><h3>Green Student Fund</h3></a><br/>
+      <img src="images/partners/gsflogo.jpg" alt="">
+    </div>
+    <div class="col span_1_of_2">
+      <p>The Green Student Fund empowers, enables, and expands student involvement in the green movement. As a national 501c(3) not-for-profit, GSF offers funding to the brightest, most promising student-led, environmental initiatives. By raising money through our generous donors, we sponsor and empower these student groups to bridge the gap between ideas and change.</p>
+      <a href="https://www.facebook.com/greenstudentfund">Facebook</a><br/>
+      <a href="https://twitter.com/greenstudentfnd">Twitter</a><br/>
+      Email: info@greenstudentfund.org
+    </div>
+  </div>
+  <div class="section group">
+    <div class="col span_1_of_2">
+      <a target="_blank" href="#"><h3>Ink for Education</h3></a><br/>
+      <img src="images/partners/ifelogo.png" alt="">
+    </div>
+    <div class="col span_1_of_2">
+      <p>The Ink For Education Program was created to help students and alums dispose of their student loan debt and expenses related to acquiring their education by collecting used inkjet and toner cartridges discarded in our landfills and turning them into funds for students’ college and vocational school education.</p>
+      <a href="http://www.inkforeducation.org/" target="_blank">Website</a>
+    </div>
+  </div>
+  <div class="section group">
+    <div class="col span_1_of_2">
+      <a target="_blank" href="#"><h3>Office of Sustainability</h3></a><br/>
+      <img src="images/partners/uscsuslogo.png" alt="">
+    </div>
+    <div class="col span_1_of_2">
+      <p>The USC Office of Sustainability office members work on teams with internal and external stakeholders such as operations units, students, faculty and school leaders, community and city leaders, and the private sector to help develop lasting solutions for some of USC’s most pressing social and environmental challenges.</p>
+      <a href="http://green.usc.edu/" target="_blank">Website</a>
+    </div>
+  </div>
+  <div class="section group">
+    <div class="col span_1_of_2">
+      <a target="_blank" href="#"><h3>Program Board</h3></a><br/>
+      <img src="images/partners/uscpblogo.png" alt="">
+    </div>
+    <div class="col span_1_of_2">
+      <p>Made up of 5 special-interest committees and 9 community-focused assemblies all united with the common goal of promoting diversity and entertainment through events on campus, USC Program Board is the programming branch of Undergraduate Student Government and the umbrella organization for many other student organizations on campus.</p>
+      <a href="http://pb.usc.edu/main/index.html" target="_blank">Website</a>
+    </div>
+  </div>
+  <div class="section group">
+    <div class="col span_1_of_2">
+      <a target="_blank" href="#"><h3>USG</h3></a><br/>
+      <img src="images/partners/usglogo.png" alt="">
+    </div>
+    <div class="col span_1_of_2">
+      <p>The USC Undergraduate Student Government is the official governing body of the nearly 19,000 undergraduates at USC. Through extensive advocacy, programming, and funding work, they seek to make a meaningful impact on the undergraduate experience.</p>
+      <a href="http://usg.usc.edu/" target="_blank">Website</a>
+    </div>
+  </div>
+  <!-- <div class="innercontent">
     <p>
       <a target="_blank" href="#">Green Student Fund</a><br/>
       <a target="_blank" href="#">Ink for Education</a><br/>
@@ -683,7 +735,7 @@ Fun Fact: My name means “date”(like the fruit) in hebrew!
       <a target="_blank" href="#">Program Board</a><br/>
       <a target="_blank" href="#">USG</a>
     </p>
-  </div>
+  </div> -->
 </div>
 <div id="members" class="subcontent">
   <h1>Member Organizations</h1>
