--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <a class="blocked" onclick="showEBoard();" href="#">Executive Board</a>
     <a class="blocked" onclick="showPartners();" href="#">Partners</a>
     <a class="blocked" onclick="showMembers();" href="#">Member Organizations</a>
-    <a class="blocked" onclick="showNewsletter();" href="#">Newsletter</a>
+    <a class="blocked" onclick="showNewsletter();" href="#">News</a>
     <a class="blocked" onclick="showContact();" href="#">Contact</a>
     <footer id="footer">
       <div class="padleft row">
