--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 Click <a href="docs/sustainability2020_booklet.pdf">here</a> to read the entire plan.</p>
               </div>
             </div>
-            <div id="eboard" class="subcontent">
+            <div id="eboard" class="subcontent grid">
               <h1>Executive Board</h1>
               <div>
                 <a>
@@ -517,7 +517,8 @@
                   </figure>
                 </a>
               </div>
-              <!-- <div class="innercontent">
+
+<!--               <div class="innercontent">
               <h2>2016-2017 E-Board</h2>
               <p>
               Executive Directors (Joshua &amp; Rebecca)<br/>
@@ -536,142 +537,7 @@
               Director of Graphics (tbd)<br/>
             </p>
 
-            <p>************************</p>
-
-            <p>
-            <strong>Aarya Suryavanshi</strong><br/>
-            <em>Director of Internal Membership</em><br/>
-            Year: Sophomore<br/>
-            Major: Mechanical Engineering<br/>
-            Fun Fact: My favorite color is green because I had a really intense Ireland phase in 7th grade.
-          </p>
-
-          <p>
-          <strong>Ailish Ullmann</strong><br/>
-          <em>Co-Director of Advocacy</em><br/>
-          Year: Junior<br/>
-          Major: Environmental Science and Health<br/>
-          Minors: Photography and Social Change; Health<br/>
-          Environmental cause most passionate about: Stopping the Anthropocene — the planet’s entirely human-caused, 6th mass extinction.
-        </p>
-
-        <p>
-        <strong>Alana Herrera</strong><br/>
-        <em>Director of Internal Membership</em>
-      </p>
-
-      <p>
-      <strong>Brooke Helstrom</strong><br/>
-      <em>Co-Director of Advocacyh</em><br/>
-      Year: Sophomore<br/>
-      Major: Environmental Studies and Philosophy, Politics, &amp; Law<br/>
-      Fun Fact: I lost my guinea pig in my backyard once.
-    </p>
-
-    <p>
-    <strong>CeCe Uhrich</strong><br/>
-    <em>Co-Director of Community Outreach</em><br/>
-    Year: Sophomore<br/>
-    Major: Environmental Science and Health<br/>
-    Fav outdoor activity: Urban gardening then making dinner with my produce!
-  </p>
-
-  <p>
-  <strong>Elliot Patrick</strong><br/>
-  <em>Director of Marketing [Social Media]</em><br/>
-  Year: Junior<br/>
-  Major: Environmental Studies<br/>
-  Fun fact: I'm lefty
-</p>
-
-<p>
-<strong>Emily Palmer</strong><br/>
-<em>Co-Director of University Outreach</em><br/>
-Year: Junior<br/>
-Major: Chemical Engineering [Sustainable Energy]<br/>
-Favorite outdoor activity: Kayaking<br/>
-Spirit Vegetable: Snap Pea
-</p>
-
-<p>
-<strong>Isabel Irawan</strong><br/>
-<em>Director of Technology</em><br/>
-Year: Junior<br/>
-Major: Neuroscience<br/>
-Fun fact: I’ve swum with whale sharks! They’re the largest fish in the ocean.
-</p>
-
-<p>
-<strong>Jacqueline Dobbas</strong><br/>
-<em>Director of Greek Relations</em>
-</p>
-
-<p>
-<strong>Joshua Blockstein</strong><br/>
-<em>Co-Director</em><br/>
-Year: Senior<br/>
-Major: Biological Sciences<br/>
-Fun fact: I love snorkeling. My favorite places I have been so far are the U.S. Virgin Islands and the Florida Keys.
-</p>
-
-<p>
-<strong>Margaux Wilson</strong><br/>
-<em>Co-Director of Community Gardens</em><br/>
-Year: Sophomore<br/>
-Major: Environmental Engineering<br/>
-Spirit vegetable: Sugar snap peas! We’ll be like 2 peas in a pod if you join ESA
-</p>
-
-<p>
-<strong>Ogechi Ibeanusi</strong><br/>
-<em>Co-Director of Community Gardens</em><br/>
-Year: Senior<br/>
-Major: History and English<br/>
-Fun Fact: I cherish spending time with my friends and family.
-</p>
-
-<p>
-<strong>Olivia Pearson</strong><br/>
-<em>Co-Director of Marketing (Public Relations)</em><br/>
-Year: Sophomore<br/>
-Major: Environmental Engineering<br/>
-Minor: Theatre<br/>
-Fun Fact: I can recite the alphabet backwards in under 3 seconds while doing a headstand.
-</p>
-
-<p>
-<strong>Paige Preston</strong><br/>
-<em>Assistant Director</em><br/>
-Major: Political Economy<br/>
-Minors: Social Entrepreneurship; Business Finance<br/>
-Spirit vegetable: an organic purple carrot
-</p>
-
-<p>
-<strong>Rebecca Weber</strong><br/>
-<em>Co-Director</em><br/>
-Year: Senior<br/>
-Major: Environmental Studies, naturally<br/>
-Spirit Vegetable: Beet
-</p>
-
-<p>
-<strong>Soolgi Hong</strong><br/>
-<em>Director of External Membership</em><br/>
-Year: Junior<br/>
-Major: Business Administration<br/>
-Minor: International Relations<br/>
-Favorite Outdoor Activity: Pretty into hiking, backpacking, and escaping the Concrete Jungle
-</p>
-
-<p>
-<strong>Tamar Fleshler</strong><br/>
-<em>Director of Sustainability Leadership</em><br/>
-Year: Junior<br/>
-Major: Environmental StudiesDirector of Sustainability Leadership<br/>
-Fun Fact: My name means “date”(like the fruit) in hebrew!
-</p>
-</div> -->
+            <p>************************</p> -->
 </div>
 <div id="partners" class="subcontent">
   <h1>Partners</h1>
@@ -737,24 +603,96 @@ Fun Fact: My name means “date”(like the fruit) in hebrew!
     </p>
   </div> -->
 </div>
-<div id="members" class="subcontent">
+<div id="members" class="subcontent grid">
   <h1>Member Organizations</h1>
-  <div class="innercontent">
-    <p>We are thrilled to have these wonderful member organizations as part of our assembly! Click on each one to learn more.</p>
-    <p>
-      <a target="_blank" href="https://www.facebook.com/animalrightsusc">Animal Rights Association</a><br/>
-      <a target="_blank" href="https://www.facebook.com/BikeUSC">Bike Coalition</a><br/>
-      <a target="_blank" href="https://www.facebook.com/usccooking/">Cooking Collaboration</a><br/>
-      <a target="_blank" href="https://www.facebook.com/ecoop1460">Eco-op</a><br/>
-      <a target="_blank" href="http://environmentalcore.org/">Environmental Core</a><br/>
-      <a target="_blank" href="https://uscesa.com/greeks-go-green/">Greeks Go Green</a><br/><!--Link Must Change Based on New Page-->
-      <a target="_blank" href="https://www.facebook.com/myclosetcloud/">MyClosetCloud</a><br/>
-      <a target="_blank" href="http://peaksandprofessors.org/">Peaks and Professors</a><br/>
-      <a target="_blank" href="https://uscesa.com/sc-outfitters/">SC Outfitters</a><br/><!--Link Must Change-->
-      <a target="_blank" href="https://www.facebook.com/foodrecoveryusc/">Trojan Recovery Food Network</a><br/>
-      <a target="_blank" href="https://uscesa.com/usc-environmental-studies-scientific-dive-team/">Environmental Studties Scientific Dive Team</a><!--Link Must Change-->
-    </p>
-  </div>
+    <a href="https://www.facebook.com/animalrightsusc">
+      <figure>
+        <img src="images/memberorgs/ara.jpg" alt="">
+        <figcaption>
+          Animal Rights Association
+        </figcaption>
+      </figure>
+    </a>
+    <a href="https://www.facebook.com/BikeUSC">
+      <figure>
+        <img src="images/memberorgs/bike.png" alt="">
+        <figcaption>
+          Bike Coalition
+        </figcaption>
+      </figure>
+    </a>
+    <a href="https://www.facebook.com/usccooking/">
+      <figure>
+        <img src="images/memberorgs/cooking.jpg" alt="">
+        <figcaption>
+          Cooking Collaboration
+        </figcaption>
+      </figure>
+    </a>
+    <a href="https://www.facebook.com/ecoop1460">
+      <figure>
+        <img src="images/memberorgs/ecoop.jpg" alt="">
+        <figcaption>
+          Eco-op
+        </figcaption>
+      </figure>
+    </a>
+    <a href="http://environmentalcore.org/">
+      <figure>
+        <img src="images/memberorgs/ecore.jpg" alt="">
+        <figcaption>
+          Environmental Core
+        </figcaption>
+      </figure>
+    </a>
+    <a href="http://www.facebook.com/GreeksGoGreenUSC/">
+      <figure>
+        <img src="images/memberorgs/ggg.png" alt="">
+        <figcaption>
+          Greeks Go Green
+        </figcaption>
+      </figure>
+    </a>
+    <a><!-- No Link -->
+      <figure>
+        <img src="images/memberorgs/NO_PHOTO.jpg" alt="">
+        <figcaption>
+          My Closet Cloud
+        </figcaption>
+      </figure>
+    </a>
+    <a href="http://peaksandprofessors.org/">
+      <figure>
+        <img src="images/memberorgs/peaks.png" alt="">
+        <figcaption>
+          Peaks and Professors
+        </figcaption>
+      </figure>
+    </a>
+    <a href="http://www.scoutfitters.org/">
+      <figure>
+        <img src="images/memberorgs/scoutfitters.jpg" alt="">
+        <figcaption>
+          SC Outfitters
+        </figcaption>
+      </figure>
+    </a>
+    <a href="https://www.facebook.com/foodrecoveryusc/">
+      <figure>
+        <img src="images/memberorgs/foodrecovery.png" alt="">
+        <figcaption>
+          Trojan Food Recovery Network
+        </figcaption>
+      </figure>
+    </a>
+    <a href="https://www.facebook.com/uscdiveteam">
+      <figure>
+        <img src="images/memberorgs/uscdive.jpg" alt="">
+        <figcaption>
+          Environmental Studies Scientific Dive Team
+        </figcaption>
+      </figure>
+    </a>
 </div>
 <div id="newsletter" class="subcontent">
   <h1>News</h1>
