--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Page title -->
   <title>USC ESA</title>
   <link href="css/custom.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Karla|Source+Sans+Pro:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Oswald:500,700" rel="stylesheet">
   <script src="js/jquery.min.js"></script>
 
   <!-- Link Previews -->
