fb events added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     <div id="events" class="subcontent">
       <div class="innercontent">
         <h1>Events</h1>
-        <div class='dsm-fb-event' embed-id='938'></div><script src='https://www.displaysocialmedia.com/app/embed/facebook-events/widget.js'></script>
+        <div class='fb-event'>
+          <iframe id="iframefb" src="" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </div>
       </div>
     </div>
 
@@ -940,6 +942,6 @@
             </div>
           </div>
         </body>
-        <!-- Include at end of file to prevent HTTP blocking -->
+        <!-- Include at end of file -->
         <script src="js/custom.js"></script>
         </html>
