--- a/index.html
+++ b/index.html
@@ -222,19 +222,19 @@
         <div id="eboard" class="subcontent">
           <h1>Executive Board</h1>
           <div>
-            Executive Directors (<a href="#fig10">Joshua</a> &amp; <a href="#fig15">Rebecca</a>)<br>
-            Assistant Director (<a href="#fig14">Paige</a>)<br>
-            Director of External Membership (<a href="#fig16">Soolgi</a>)<br>
-            Director of Internal Membership (<a href="#fig1">Aarya</a>)<br>
-            Director of Advocacy (<a href="#fig4">Brooke</a> &amp; <a href="#fig2">Ailish</a>)<br>
-            Director of Marketing [Social Media] (<a href="#fig6">Elliot</a>)<br>
-            Director of Marketing [Public Relations] (<a href="#fig13">Olivia</a>)<br>
-            Director of Community Outreach (<a href="#fig3">Alana</a> &amp; <a href="#fig5">CeCe</a>)<br>
-            Director of University Outreach (<a href="#fig7">Emily</a>)<br>
-            Director of Sustainability Leadership (<a href="#fig17">Tamar</a>)<br>
-            Technology Director (<a href="#fig8">Isabel</a>)<br>
-            Directors of Community Gardens (<a href="#fig11">Margaux</a> &amp; <a href="#fig12">Ogechi</a>)<br>
-            Director of Greek Relations (<a href="#fig9">Jackie</a>)<br><br>
+            Executive Directors (<a href="#fig10">Olivia</a> &amp; <a href="#fig15">Emily</a>)<br>
+            Assistant Director (<a href="#fig14">Caden</a>)<br>
+            Diretor of Events (<a href="#fig14">Joseph</a>)<br>
+            Director of Financial Operations (<a href="#fig14">Soven</a>)<br>
+            Director of External Affairs (<a href="#fig16">Firuze</a>)<br>
+            Director of Internal Affairs (<a href="#fig1">Sachi</a>)<br>
+            Directors of Advocacy (<a href="#fig4">Carissa</a> &amp; <a href="#fig2">Autumn</a>)<br>
+            Directors of Outreach (<a href="#fig3">Devin</a> &amp; <a href="#fig5">Margaux</a>)<br>
+            Director of Public Relations (<a href="#fig13">Claire</a>)<br>
+            Social Media Chairs (<a href="#fig4">Maryam</a> &amp; <a href="#fig2">Emily</a>)<br>
+            Technology Chair (<a href="#fig8">Isabella</a>)<br>
+            Community Gardens Chair (<a href="#fig11">Ogechi</a>)<br>
+            Greek Relations Chairs (<a href="#fig3">Olivia</a> &amp; <a href="#fig5">Samantha</a>)<br><br>
           </div>
           <div class="grid">
             <div>
@@ -242,10 +242,10 @@
                 <figure id="fig1">
                   <img src="images/eboard/aaryas.jpg" alt="">
                   <h2>
-                    Aarya Suryavanshi
+                    Autumn Gupta
                   </h2>
                   <em>
-                    Director of Internal Membership
+                    Director of Advocacy
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -262,10 +262,10 @@
                 <figure id="fig2">
                   <img src="images/eboard/aillishu.jpg" alt="">
                   <h2>
-                    Ailish Ullmann
+                    Caden Cervesis
                   </h2>
                   <em>
-                    Co-Director of Advocacy
+                    Assistant Director
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -285,10 +285,10 @@
                 <figure id="fig3">
                   <img src="images/eboard/alanah.jpg" alt="">
                   <h2>
-                    Alana Herrera
+                   Carissa Velasquez
                   </h2>
                   <em>
-                    Director of Community Outreach
+                    Co-Director of Advocacy
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -305,10 +305,10 @@
                 <figure id="fig4">
                   <img src="images/eboard/brookeh.jpg" alt="">
                   <h2>
-                    Brooke Helstrom
+                    Claire Mauss
                   </h2>
                   <em>
-                    Co-Director of Advocacy
+                    Director of Public Relations
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -325,10 +325,10 @@
                 <figure id="fig5">
                   <img src="images/eboard/ceceu.jpg" alt="">
                   <h2>
-                    CeCe Uhrich
+                    Devin Manion
                   </h2>
                   <em>
-                    Co-Director of Community Outreach
+                    Co-Director of Outreach
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -345,10 +345,10 @@
                 <figure id="fig6">
                   <img src="images/eboard/elliotp.jpg" alt="">
                   <h2>
-                    Elliot Patrick
+                    Emily Palmer
                   </h2>
                   <em>
-                    Director of Marketing (Social Media)
+                   Co-Executive Director
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -365,10 +365,10 @@
                 <figure id="fig7">
                   <img src="images/eboard/emilyp.jpg" alt="">
                   <h2>
-                    Emily Palmer
+                    Emily Quirke
                   </h2>
                   <em>
-                    Co-Director of University Outreach
+                    Co-Social Media Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -388,10 +388,10 @@
                 <figure id="fig8">
                   <img src="images/eboard/isabeli.jpg" alt="">
                   <h2>
-                    Isabel Irawan
+                    Firuze Barimani
                   </h2>
                   <em>
-                    Director of Technology
+                    Director of External Affairs
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -408,16 +408,16 @@
                 <figure id="fig9">
                   <img src="images/eboard/jacquelined.jpg" alt="">
                   <h2>
-                    Jacqueline Dobbas
+                    Isabella Caltabiano
                   </h2>
                   <em>
-                    Director of Greek Relations
+                    Technology Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> UNKNOWN
+                    <strong>Year:</strong> Sophomore
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> UNKNOWN
+                    <strong>Major:</strong> International Relations
                   </figcaption>
                   <figcaption>
                     <strong>Fun fact:</strong> UNKNOWN
@@ -428,10 +428,10 @@
                 <figure id="fig10">
                   <img src="images/eboard/joshuab.jpg" alt="">
                   <h2>
-                    Joshua Blockstein
+                    Joseph Mathews
                   </h2>
                   <em>
-                    Co-Director
+                    Director of Events
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Senior
@@ -451,7 +451,7 @@
                     Margaux Wilson
                   </h2>
                   <em>
-                    Co-Director of Community Gardens
+                    Co-Director of Outreach
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -468,10 +468,10 @@
                 <figure id="fig12">
                   <img src="images/eboard/ogechii.jpg" alt="">
                   <h2>
-                    Ogechi Ibeanusi
+                    Maryam Sultan
                   </h2>
                   <em>
-                    Co-Director of Community Gardens
+                    Co-Social Media Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Senior
@@ -488,10 +488,10 @@
                 <figure id="fig13">
                   <img src="images/eboard/oliviap.jpg" alt="">
                   <h2>
-                    Olivia Pearson
+                    Ogechi Ibeanusi
                   </h2>
                   <em>
-                    Co-Director of Marketing (Public Relations)
+                    Community Gardens Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -511,10 +511,10 @@
                 <figure id="fig14">
                   <img src="images/eboard/paigep.jpg" alt="">
                   <h2>
-                    Paige Preston
+                    Olivia Carmack
                   </h2>
                   <em>
-                    Assistant Director
+                    Co-Greek Relations Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> UNKNOWN
@@ -534,10 +534,10 @@
                 <figure id="fig15">
                   <img src="images/eboard/rebeccaw.jpg" alt="">
                   <h2>
-                    Rebecca Weber
+                    Olivia Pearson
                   </h2>
                   <em>
-                    Co-Director
+                    Co-Executive Director
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Senior
@@ -554,10 +554,10 @@
                 <figure id="fig16">
                   <img src="images/eboard/soolgih.jpg" alt="">
                   <h2>
-                    Soolgi Hong
+                    Sachi Elias
                   </h2>
                   <em>
-                    Director of External Membership
+                    Director of Internal Affairs
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -577,10 +577,10 @@
                 <figure id="fig17">
                   <img src="images/eboard/tamarf.jpg" alt="">
                   <h2>
-                    Tamar Fleshler
+                    Samantha Archie
                   </h2>
                   <em>
-                    Director of Sustainability Leadership
+                    Co-Greek Relations Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Junior
@@ -592,6 +592,28 @@
                     <strong>Fun fact:</strong> My name means “date”(like the fruit) in hebrew!
                   </figcaption>
                 </figure>
+              </a>
+              <a>
+                <figure id="fig17">
+                  <img src="images/eboard/tamarf.jpg" alt="">
+                  <h2>
+                    Soven Bery
+                  </h2>
+                  <em>
+                    Director of Financial Operations
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> Junior
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong> Environmental Studies
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun fact:</strong> My name means “date”(like the fruit) in hebrew!
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
                 <!-- ADD NEW MEMBERS HERE -->
               </a>
             </div>
