--- a/index.html
+++ b/index.html
@@ -616,6 +616,9 @@
               <a>
                 <!-- ADD NEW MEMBERS HERE -->
               </a>
+              <a>
+                <!-- ADD NEW MEMBERS HERE -->
+              </a>
             </div>
           </div>
         </div>
@@ -938,6 +941,7 @@
             </div>
             <div id="contact" class="subcontent">
               <h1>Contact</h1>
+              <!-- uscesa@usc.edu -->
               <div class="innercontent">
                 <p>Seen an environmental problem in our community? Have an idea you’d like to see come to life? An event you’d like to see on campus? Want to be more involved but don’t know how? Leave a question, comment, and/or suggestion below.</p>
                 <br>
